[gd_scene load_steps=13 format=3 uid="uid://cg0cms0nuwla4"]

[ext_resource type="Script" path="res://Player.gd" id="1_jcma5"]
[ext_resource type="PackedScene" uid="uid://ux6ivcx1ovdp" path="res://Particles/booster_particles.tscn" id="2_t8qqa"]
[ext_resource type="AudioStream" uid="uid://dek0akgvt8qn2" path="res://Audio/SFX - Death Explosion.ogg" id="3_xxta5"]
[ext_resource type="AudioStream" uid="uid://bra2fcbywl2gs" path="res://Audio/SFX - Success.ogg" id="4_i5gy8"]
[ext_resource type="AudioStream" uid="uid://cirefdppfrybw" path="res://Audio/SFX - Main engine thrust.ogg" id="5_pjcti"]
[ext_resource type="PackedScene" uid="uid://dcecb8hw7dbrv" path="res://Particles/explosion_particles.tscn" id="6_ti14x"]
[ext_resource type="PackedScene" uid="uid://jfwajmrh6ca7" path="res://Particles/success_particles.tscn" id="7_662tc"]
[ext_resource type="Material" uid="uid://coyj1rnc6k2ii" path="res://PlayerMaterial.tres" id="8_hc82l"]

[sub_resource type="CylinderMesh" id="CylinderMesh_ya3cj"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_yyx6b"]

[sub_resource type="CylinderMesh" id="CylinderMesh_jiui6"]
top_radius = 0.0
bottom_radius = 0.25
height = 0.5

[sub_resource type="CylinderMesh" id="CylinderMesh_6gmqq"]
top_radius = 0.25
bottom_radius = 0.25
height = 1.5

[node name="Player" type="RigidBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.57552, 0)
axis_lock_linear_z = true
axis_lock_angular_x = true
axis_lock_angular_y = true
max_contacts_reported = 10
contact_monitor = true
linear_damp = 3.0
angular_damp = 2.0
script = ExtResource("1_jcma5")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
visible = false
mesh = SubResource("CylinderMesh_ya3cj")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CylinderShape3D_yyx6b")

[node name="BoosterMiddleParticles" parent="." instance=ExtResource("2_t8qqa")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)

[node name="BoosterLeftParticles" parent="." instance=ExtResource("2_t8qqa")]
transform = Transform3D(0.866025, 0.5, 0, -0.5, 0.866025, 0, 0, 0, 1, -0.37031, -1, 0)

[node name="BoosterRightParticles" parent="." instance=ExtResource("2_t8qqa")]
transform = Transform3D(0.866025, -0.5, 0, 0.5, 0.866025, 0, 0, 0, 1, 0.40142, -1.05412, 0)

[node name="Explosion_audio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_xxta5")

[node name="Success_audio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_i5gy8")

[node name="Rocket_audio" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("5_pjcti")

[node name="ExplosionParticles" parent="." instance=ExtResource("6_ti14x")]

[node name="SuccessParticles" parent="." instance=ExtResource("7_662tc")]

[node name="Cockpit" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.741496, 0)
material_override = ExtResource("8_hc82l")
mesh = SubResource("CylinderMesh_jiui6")

[node name="Middle_Body" type="MeshInstance3D" parent="Cockpit"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.9932, 0)
material_override = ExtResource("8_hc82l")
mesh = SubResource("CylinderMesh_6gmqq")
skeleton = NodePath("../..")

[node name="LeftThrust" type="MeshInstance3D" parent="Cockpit"]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, -0.377626, -0.866318, 0)
material_override = ExtResource("8_hc82l")
mesh = SubResource("CylinderMesh_jiui6")
skeleton = NodePath("../..")

[node name="LeftMiddleThrust" type="MeshInstance3D" parent="Cockpit/LeftThrust"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.9932, 0)
material_override = ExtResource("8_hc82l")
mesh = SubResource("CylinderMesh_6gmqq")
skeleton = NodePath("../../..")

[node name="RightThrust" type="MeshInstance3D" parent="Cockpit"]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0.381328, -0.866318, 0)
material_override = ExtResource("8_hc82l")
mesh = SubResource("CylinderMesh_jiui6")
skeleton = NodePath("../..")

[node name="RightMiddleThrust" type="MeshInstance3D" parent="Cockpit/RightThrust"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.9932, 0)
material_override = ExtResource("8_hc82l")
mesh = SubResource("CylinderMesh_6gmqq")
skeleton = NodePath("../../..")
